--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,82 @@
+# Generated files #
+###################
+node_modules
+node
+target-grunt
+.sass-cache
+.grunt
+C:
+.project
+.classpath
+.settings
+generated
+
+# Compiled source #
+###################
+# *.com
 *.class
+*.dll
+*.exe
+*.o
+*.so
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
 *.jar
-*.war
-*.ear
+*.rar
+*.tar
+*.zip
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+~*
+
+
+# Intellij           #
+######################
+.idea
+
+# Netbeans           #
+######################
+nb-configuration.xml
+nbactions.xml
+
+# Templates           #
+######################
+settings.json
+
+# Other              #
+######################
+*.iml
+*.iws
+*.ipr
+*.vlt
+*.vertx
+
+target
+atlassian-ide-plugin.xml
+bin/
+*.bak
+
+# Project specific   #
+######################
+.vertx
