--- a/conferences/devoxx2017/examples/market-api/pom.xml
+++ b/conferences/devoxx2017/examples/market-api/pom.xml
@@ -6,12 +6,13 @@
 
   <groupId>io.knotx.examples</groupId>
   <artifactId>market-api</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
 
   <properties>
     <file.encoding>UTF-8</file.encoding>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>1.8</java.version>
+    <knotx.version>1.1.0</knotx.version>
   </properties>
 
   <dependencies>
@@ -23,12 +24,12 @@
     <dependency>
       <groupId>io.knotx</groupId>
       <artifactId>knotx-gateway</artifactId>
-      <version>1.0.2-SNAPSHOT</version>
+      <version>${knotx.version}</version>
     </dependency>
     <dependency>
       <groupId>io.knotx</groupId>
       <artifactId>knotx-core</artifactId>
-      <version>1.0.2-SNAPSHOT</version>
+      <version>${knotx.version}</version>
     </dependency>
   </dependencies>
 
