--- a/adapt-service-without-webapi/pom.xml
+++ b/adapt-service-without-webapi/pom.xml
@@ -3,9 +3,9 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>io.knotx</groupId>
-  <artifactId>io-knotx</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <groupId>io.knotx.tutorial</groupId>
+  <artifactId>custom-service-adapter</artifactId>
+  <version>1.1.1</version>
 
   <name>io knotx</name>
   <!-- FIXME change it to the project's website -->
@@ -37,7 +37,7 @@
     <dependency>
       <groupId>io.vertx</groupId>
       <artifactId>vertx-jdbc-client</artifactId>
-      <version>3.4.2</version>
+      <version>3.4.1</version>
     </dependency>
     <dependency>
       <groupId>org.hsqldb</groupId>
